--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -3,7 +3,7 @@
     "welcome": "🌍 Welcome to the history website – where we explore the journey from Utopian Socialism\n to Scientific Socialism ✨.\nLearn about the ideas, people and turning points that changed the course of humanity!"
   },
   "header": {
-    "title": "Marxism–Leninism philosophy"
+    "title": "Products of the scientific socialism theme"
   },
   "navbar": {
     "home": "Home",
